style.css
/* ... */
/* Follow Section */
.follow-container{
  display: flex;
  flex-direction: column;
  margin-top: 100px;
  align-items: center;
}

.follow-img-container{
  display: grid;
  height: 330px;
  width: 100%;
  grid-template-columns: 330px 330px 330px 330px;
  justify-content: center;
}

.follow-img-wrapper{
  height: 330px;
  width: 100%;
}
.follow-img-wrapper > img{
  object-fit: contain;
  width: 100%;
} 

.title-follow{
  display: flex;
  align-items: center;
  flex-direction: column;
}
.title-follow > h2{
  color: var(--colorPrimary);
  font-family: var(--ff);
  margin-bottom: 8px;
}
.title-follow > h2 > span{
  color: var(--colorAccent);
}
.title-follow > p{
  margin-top: 0;
  color: var(--colorSecondary);
  font-family: var(--colorSecondary);
  text-align: center;
}

.follow-button-container{
  display: flex;
  gap: 8px;
  margin-top: 24px;
}

.btn-folllow-Gallery{
  border-radius: 41.534px;
  background: #fff;
  box-shadow: 8px 8px 1px 0px #74512D;
  border-radius: 50.383px;
  border: 1.136px solid var(--Neutral-color, #D4D2E3);
  color:var(--colorSecondary);
  font-family: var(--ff);
  font-weight: bold;
  padding: 24px 56px;
}

.btn-folllow-Gallery:active{
  position: relative;
  top: 7px;
  left: 8px;
  box-shadow: none;
}
.btn-follow-us{
  border-radius: 50.383px;
  border: none;
  color: #FFF;
  font-family: var(--ff);
  font-weight: bold;
  background: var(--colorAccent);
  padding: 1em 2.3em;
  box-shadow: 6px 6px 4px 0px rgba(0, 0, 0, 0.25);
}


/* Contact Us Section*/

.contactus-container{
  width: 100%;
  height: 564px;
  position: relative;
}
.contactus-container > img{
  width: 100%;
  height: 564px;
  object-fit: cover;
  margin-top: 100px;
}

.contact-us-action-form{
  display: inline-flex;
  flex-direction: column;
  position: absolute;
  background:#fff;
  width: 30rem;
  height: 410px;
  border-radius: 25px;
  left: 100px;
  top: 100px;
  opacity: 94%;
  margin-top: 5rem;
}

.title-text-action{
  display: flex;
  flex-direction: column;
  margin: 50px 0 0 50px;
}
.title-text-action > h2{
  font-family: var(--ff);
  color: var(--colorSecondary);
}
.title-text-action > p{
  margin-top: 0;
  font-family: var(--ff);
  font-weight: 400;
  font-weight: 18px;
  color: var(--colorSecondary);
}
.action-btn-contact{
  display: flex;
  flex-direction: column;
  margin: 50px 0 0 50px;
  gap: 20px;
}
.action-btn-contact > a{
  text-decoration: underline;
  font-family: var(--ff);
  display: inline-flex;
  align-items: center;
  gap: 8px;
}

.contactbutton{
  padding: 24px 36px 24px 36px;
  justify-content: center;
  width: 50%;
  font-family: var(--ff);
  border-radius: 40px;
  border: 1px solid  #25D366;
  background: transparent;
  font-weight: bold;
  color: #25D366;
}
.contactbutton:hover{
  background: #25D366;
  color: #fff;
}

/* Footer Section */
.footer-container{
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  margin-top: 10rem;
}

.footer-contents{
  display: flex;
  gap: 5px;
  justify-content: space-around;
  flex-wrap: wrap;
  row-gap: 5rem;
  column-gap: 1rem;
}
.mail-content-container{
  display: inline-flex;
  flex-direction: column;
  gap: 16px;
}

.log-footer{
  display: flex;
  justify-content: center;
}
.mail-content-container > p{
  font-family: var(--ff);
  color: var(--colorSecondary);
}
.mail-content-container > input{
  background-color: #F9F9FF;
  border: none;
  border-radius: 50px;
  padding: 24px;
}


.mail-content-container > button{
  justify-content: center;
}

.links{
  display: inline-flex;
  gap: 42px;
}
.links-container{
  display: inline-flex;
  flex-direction: column;
  gap: 16px;
}
.link{
  text-decoration: none;
  color: var(--colorSecondary);
  font-family: var(--ff);

}

.link:hover{
  text-decoration-line: underline;
  color: var(--colorAccent);
  font-family: var(--ff);
  font-weight: 300;
}

.footer-photo-gallery{
  display: grid;
  grid-template-columns: 130px 130px;
  grid-template-rows: 130px 130px;
  gap: 10px;
}

.footer-img{
  background-color: rgb(198, 185, 185);
  border-radius: 20px;
}

.footer-img > img{
  object-fit: contain;
  height: 130px;
  width: 100%;
}

.footer-titles{
  font-family: var(--ff);
  font-weight: 500;
  color: var(--colorPrimary);
  font-size: 24px;
  margin-top: 0;
}

hr{
  width: 90%;
}

.footer-socialmedia{
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 24px;
}

.footer-socialmedia > p{
  color: grey;
  font-family: var(--ff);
  font-weight: 200;
}









/* Media Quearys */


/* 2xl */
@media (max-width: 1536px) {
  .container {
    max-width: 1280px;
  }
  .header-contents{
    gap: 16rem;
  }
}

/* xl */
@media (max-width: 1280px) {
  .container {
    max-width: 1024px;
  }
  .header-contents{
    gap: 8rem;
  }

  /* About Us Section */
  .aboutus-content-container {
    font-family: var(--ff);
    max-width: 50%;
  }
  .aboutus-content-container > h2 {
    font-family: var(--ff);
  }

  .btn-aboutus-gallery{
    padding: 0.8em 5em;
    font-size: 0.8rem;
  }


  .btn-aboutus-learnmore{
    padding: 0.8em 5em;
    font-size: 0.8rem;
  }

}

/* lg */
@media (max-width: 1024px) {
  .container {
    max-width: 768px;
  }
  .section{
    margin-top: 9rem;
  }

  /* Header Section */
  .header-contents{
    gap: 6rem;
  }
  .logo{
    width: 7rem;
    }
    .primarybutton{
    font-family: var(--ff);
    font-size: var(--size-base);
  }

  /* Hero Section */
  .title-btn-container{
    top: 50px;
  }
  .btn-fill{
    font-size: 1rem;
  }
  .btn-outline{
    font-size: 1rem;
  }

  /* About Us Section */
  .aboutus-content-container {
    gap: 2px;
  } 
  .aboutus-container{
    gap: 62px;
  }

  .btn-container{
    gap: 8px;
  }
  .btn-aboutus-gallery{
    padding: 1em 5em;
    font: 0.7rem;
  }


  .btn-aboutus-learnmore{
    padding: 1em 5em;
    font-size: 0.7rem;
  }


}
/* ... */

